try for dockerize